Spacing fixes

--- a/app/assets/stylesheets/sections/_set_well.scss
+++ b/app/assets/stylesheets/sections/_set_well.scss
@@ -24,6 +24,9 @@
   h6 {
     display: inline;
   }
+  p{
+    margin-top: 10px;
+  }
 }
 
 .navbar-form .btn{
